--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,8 @@
 {
-	"name": "Go",
-	"image": "mcr.microsoft.com/devcontainers/go:1-trixie",
-	"features": {
-		"ghcr.io/devcontainers/features/git:1": {},
-		"ghcr.io/eitsupi/devcontainer-features/nushell:0": {}
-	}
+    "name": "Go",
+    "image": "mcr.microsoft.com/devcontainers/go:2-1.25-trixie",
+    "features": {
+        "ghcr.io/devcontainers/features/git:1": {},
+        "ghcr.io/devcontainers/features/github-cli:1": {}
+    }
 }
