chore: standardize configuration files (.gitignore, .gitattributes, .editorconfig)

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,21 @@
 
 # Go workspace file
 go.work
+go.work.sum
+
+# env file
+.env
+
+# Visual Studio Code files
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
